correción de tamaños

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/general.css">
-    <title>Memorice</title>
+    <title>Wingzpot - Premios</title>
 </head>
 <body>
     <main>
         <section class="title-section">
             <h1 class="main-title">
-                Memorice Digital
+                Tarjetas con nombre kul
             </h1>
         </section>
         <section class="button-section">
