--- a/memorice.html
+++ b/memorice.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style/memorice-style.css">
+    <link rel="stylesheet" href="assets/style/memorice-style-small.css">
+    <link rel="stylesheet" href="assets/style/memorice-style-medium.css">
+    <link rel="stylesheet" href="assets/style/memorice-style-large.css">
+    <link rel="stylesheet" href="assets/style/memorice-style-extralarge.css">
     <link rel="stylesheet" href="assets/style/general.css">
     <title>Wingzpot - Premios</title>
 </head>
