--- a/memorice.html
+++ b/memorice.html
@@ -22,6 +22,6 @@
     </main>
     
 
-    <script src="assets/script/main.js"></script>
+    <script src="assets/script/main-two.js"></script>
 </body>
 </html>
